<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_public_padding"
    android:paddingRight="@dimen/activity_public_padding"
    android:paddingTop="50dp"
    android:background="@mipmap/uu"
    tools:context="com.example.administrator.testapp.controller.Login">
     <ImageView
         android:id="@+id/img_logo"
         android:layout_width="42dp"
         android:layout_height="44dp"
         android:layout_marginRight="10dp"
         android:background="@mipmap/openmind"
         />
    <TextView
        app:layout_goneMarginRight="10dp"
        android:textColor="#ffffff"
        app:layout_constraintLeft_toRightOf="@id/img_logo"
        android:textSize="@dimen/special_big_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_OpenMind"
        />
    <LinearLayout
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        android:id="@+id/loginViewGroup"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:background="@drawable/border"
            android:textSize="@dimen/public_fontSize"
            android:id="@+id/userName"
            android:hint="@string/login_hint_font"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_EditText_height" />
        <EditText
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            style="?android:attr/textViewStyle"
            android:textSize="@dimen/public_fontSize"
            android:background="@drawable/border"
            android:id="@+id/pwd"
            android:hint="@string/login_hint_pwd"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_EditText_height" />
        <Button
            android:textSize="@dimen/public_fontSize"
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="#ffffff"
            android:background="@color/colorAccent"
            android:text="@string/login_text_login"
            />
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/forget"
                 android:layout_marginTop="10dp"
                 android:textColor="@color/colorAccent"
                 android:textSize="@dimen/public_fontSize"
                 android:layout_alignParentLeft="true"
                 android:text="@string/login_text_forget"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
                 android:id="@+id/register"
                 android:layout_marginTop="10dp"
                 android:textColor="@color/colorAccent"
                 android:textSize="@dimen/public_fontSize"
                android:layout_alignParentRight="true"
                 android:text="@string/login_text_register"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </RelativeLayout>
    </LinearLayout>
     <TextView
         android:layout_marginBottom="30dp"
         android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="@dimen/public_fontSize"
         android:text="@string/login_serverText"
         />
</android.support.constraint.ConstraintLayout>
